--- a/MicroService/sosyalmedya/build.gradle
+++ b/MicroService/sosyalmedya/build.gradle
@@ -33,10 +33,13 @@ allprojects {
         }
     }
     dependencies {
+        implementation libs.hibernateValidator
         implementation libs.springBootWeb
         implementation libs.lombok
         annotationProcessor libs.lombok
         implementation libs.swaggerui
+        implementation libs.mapstruct
+        implementation libs.mapstructProcessor
         testImplementation(platform("org.junit:junit-bom:5.9.1"))
         testImplementation("org.junit.jupiter:junit-jupiter")
     }
