UserService Save FindAll

--- a/MicroService/sosyalmedya/dependencies.gradle
+++ b/MicroService/sosyalmedya/dependencies.gradle
@@ -10,6 +10,7 @@ ext {
     libs = [
             springBootWeb     : "org.springframework.boot:spring-boot-starter-web:${versions.springBoot}",
             springDataJpa     : "org.springframework.boot:spring-boot-starter-data-jpa:${versions.springBoot}",
+            springDataMongodb : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}",
             lombok            : "org.projectlombok:lombok:${versions.lombok}",
             swaggerui         : "org.springdoc:springdoc-openapi-starter-webmvc-ui:${versions.swaggerui}",
             postgresql        : "org.postgresql:postgresql:${versions.postgresql}",
