--- a/MicroService/sosyalmedya/auth-micro-service/build.gradle
+++ b/MicroService/sosyalmedya/auth-micro-service/build.gradle
@@ -6,4 +6,7 @@ buildscript {
 dependencies {
     implementation libs.springDataJpa
     implementation libs.postgresql
+    implementation libs.springCloudConfigClient
+    implementation libs.springCloudConfig
+
 }
