--- a/MicroService/sosyalmedya/settings.gradle
+++ b/MicroService/sosyalmedya/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = "sosyalmedya"
 include 'auth-micro-service'
 include 'user-micro-service'
 include 'post-micro-service'
+include 'config-server'
 
