--- a/MicroService/sosyalmedya/auth-micro-service/src/main/resources/application.yml
+++ b/MicroService/sosyalmedya/auth-micro-service/src/main/resources/application.yml
@@ -1,13 +1,8 @@
-server:
-  port: 9090
-
 spring:
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/AuthDB
-    username: postgres
-    password: 123456789
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  cloud:
+    config:
+      uri: http://localhost:8888
+  config:
+    import: "configserver:"
+  application:
+    name: auth-application
