--- a/MicroService/sosyalmedya/user-micro-service/src/main/resources/application.yml
+++ b/MicroService/sosyalmedya/user-micro-service/src/main/resources/application.yml
@@ -1,11 +1,8 @@
-server:
-  port: 9092
-
 spring:
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: sosyalmedyadb
-      username: admin
-      password: root
+  cloud:
+    config:
+      uri: http://localhost:8888
+  config:
+    import: "configserver:"
+  application:
+    name: user-application
