--- a/MicroService/sosyalmedya/settings.gradle
+++ b/MicroService/sosyalmedya/settings.gradle
@@ -3,4 +3,5 @@ include 'auth-micro-service'
 include 'user-micro-service'
 include 'post-micro-service'
 include 'config-server'
+include 'config-server-git'
 
