--- a/MicroService/sosyalmedya/user-micro-service/build.gradle
+++ b/MicroService/sosyalmedya/user-micro-service/build.gradle
@@ -8,4 +8,5 @@ dependencies {
     implementation libs.springDataMongodb
     implementation libs.springCloudConfigClient
     implementation libs.springCloudConfig
+    implementation libs.springBootAmqp
 }
