--- a/MicroService/sosyalmedya/auth-micro-service/build.gradle
+++ b/MicroService/sosyalmedya/auth-micro-service/build.gradle
@@ -8,5 +8,6 @@ dependencies {
     implementation libs.postgresql
     implementation libs.springCloudConfigClient
     implementation libs.springCloudConfig
+    implementation libs.springBootAmqp
 
 }
