--- a/MicroService/sosyalmedya/build.gradle
+++ b/MicroService/sosyalmedya/build.gradle
@@ -41,6 +41,8 @@ allprojects {
         annotationProcessor libs.mapstructProcessor
         implementation libs.swaggerui
         implementation libs.springOpenFeign
+        implementation libs.springCloudStarterSleuth
+        implementation libs.springCloudSleuthZipkin
         testImplementation(platform("org.junit:junit-bom:5.9.1"))
         testImplementation("org.junit.jupiter:junit-jupiter")
     }
