--- a/MicroService/sosyalmedya/config-server/src/main/resources/application.yml
+++ b/MicroService/sosyalmedya/config-server/src/main/resources/application.yml
@@ -2,10 +2,20 @@ server:
   port: 8888
 
 spring:
+  zipkin:
+    enabled: false
+    base-url: http://localhost:9411
+    service:
+      name: config-server
   profiles:
     active: native
   cloud:
+    compatibility-verifier:
+      enabled: false
     config:
       server:
         native:
           search-locations: classpath:/config-repo
+  sleuth:
+    sampler:
+      probability: 1.0
