--- a/MicroService/sosyalmedya/api-gateway-service/build.gradle
+++ b/MicroService/sosyalmedya/api-gateway-service/build.gradle
@@ -3,11 +3,11 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${versions.springBoot}")
     }
 }
-
 dependencies {
-    implementation libs.springDataMongodb
+    implementation libs.springCloudGateway
+    implementation libs.springCloudCircuitBreaker
+    implementation libs.springCloudCircuitBreakerReactor
     implementation libs.springCloudConfigClient
     implementation libs.springCloudConfig
-    implementation libs.springBootAmqp
-    implementation libs.springBootSecurity
+
 }
