--- a/MicroService/sosyalmedya/config-server/src/main/resources/config-repo/user-application.yml
+++ b/MicroService/sosyalmedya/config-server/src/main/resources/config-repo/user-application.yml
@@ -20,5 +20,5 @@ spring:
       host: localhost
       port: 27017
       database: sosyalmedyadb
-      username: admin
-      password: root
+      username: bilgeadmin
+      password: bilge33**
