--- a/MicroService/sosyalmedya/config-server/src/main/resources/config-repo/user-application.yml
+++ b/MicroService/sosyalmedya/config-server/src/main/resources/config-repo/user-application.yml
@@ -1,4 +1,7 @@
 server:
+  servlet:
+      session:
+        timeout: 120
   port: 9092
 
 spring:
@@ -26,3 +29,8 @@ spring:
       database: sosyalmedyadb
       username: admin
       password: root
+
+# myapplication:
+    #   redis:
+    #    host: ${REDIS_HOST}
+  #    port: ${REDIS_PORT}
