--- a/MicroService/sosyalmedya/dependencies.gradle
+++ b/MicroService/sosyalmedya/dependencies.gradle
@@ -16,6 +16,7 @@ ext {
             springBootSecurity              : "org.springframework.boot:spring-boot-starter-security:${versions.springBoot}",
             springDataJpa                   : "org.springframework.boot:spring-boot-starter-data-jpa:${versions.springBoot}",
             springDataMongodb               : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}",
+            springDataRedis                 : "org.springframework.boot:spring-boot-starter-data-redis:${versions.springBoot}",
             // SpringCloud Bağımlılıkları
             springOpenFeign                 : "org.springframework.cloud:spring-cloud-starter-openfeign:${versions.springCloud}",
             springCloudConfigServer         : "org.springframework.cloud:spring-cloud-config-server:${versions.springCloud}",
