--- a/MicroService/sosyalmedya/user-micro-service/build.gradle
+++ b/MicroService/sosyalmedya/user-micro-service/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation libs.springCloudConfig
     implementation libs.springBootAmqp
     implementation libs.springBootSecurity
+    implementation libs.springDataRedis
 }
